[gd_scene load_steps=13 format=3 uid="uid://d35rqaqdqkt6x"]

[ext_resource type="Script" path="res://Entities/Weapons/Gun.gd" id="1_njox0"]
[ext_resource type="PackedScene" uid="uid://deb26datidugv" path="res://Shaders/VisualTestArea.tscn" id="2_0s0ld"]
[ext_resource type="Script" path="res://Entities/Weapons/Gun-Rifle.gd" id="2_4luqg"]
[ext_resource type="Texture2D" uid="uid://n8aih3jo7tfy" path="res://Shaders/Lights/General.Spotlight.png" id="4_jryup"]
[ext_resource type="Texture2D" uid="uid://cgmofnkdo20sl" path="res://Shaders/Particles/muzzle.png" id="4_vkikv"]
[ext_resource type="PackedScene" uid="uid://dc3jwfr08ejes" path="res://Entities/Weapons/BulletPath.tscn" id="5_j7t08"]
[ext_resource type="PackedScene" uid="uid://dgh25kwhgv2hd" path="res://Entities/Weapons/BulletSpark.tscn" id="6_nqlb2"]

[sub_resource type="Animation" id="Animation_gmvwc"]
resource_name = "Firing"
length = 1.175
step = 0.025
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"values": [{
"args": [],
"method": &"fire"
}, {
"args": [],
"method": &"fire"
}, {
"args": [],
"method": &"fire"
}, {
"args": [],
"method": &"fire"
}, {
"args": [],
"method": &"fire"
}, {
"args": [],
"method": &"fire"
}, {
"args": [],
"method": &"fire"
}, {
"args": [],
"method": &"fire"
}, {
"args": [],
"method": &"fire"
}, {
"args": [],
"method": &"fire"
}, {
"args": [],
"method": &"fire"
}, {
"args": [],
"method": &"fire"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Muzzle:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.025, 0.075, 0.1, 0.125, 0.175, 0.2, 0.225, 0.275, 0.3, 0.325, 0.375, 0.4, 0.425, 0.475, 0.5, 0.525, 0.575, 0.6, 0.625, 0.675, 0.7, 0.725, 0.775, 0.8, 0.825, 0.875, 0.9, 0.925, 0.975, 1, 1.025, 1.075, 1.1, 1.125, 1.175),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [1.5, 0.0, 0.0, 1.5, 0.0, 0.0, 1.5, 0.0, 0.0, 1.5, 0.0, 0.0, 1.5, 0.0, 0.0, 1.5, 0.0, 0.0, 1.5, 0.0, 0.0, 1.5, 0.0, 0.0, 1.5, 0.0, 0.0, 1.5, 0.0, 0.0, 1.5, 0.0, 0.0, 1.5, 0.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Muzzle/Flash:energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.075, 0.1, 0.15, 0.175, 0.2, 0.25, 0.275, 0.3, 0.35, 0.375, 0.4, 0.45, 0.475, 0.5, 0.55, 0.575, 0.6, 0.65, 0.675, 0.7, 0.75, 0.775, 0.8, 0.85, 0.875, 0.9, 0.95, 0.975, 1, 1.05, 1.075, 1.1, 1.15, 1.175),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [2.0, 0.0, 0.0, 2.0, 0.0, 0.0, 2.0, 0.0, 0.0, 2.0, 0.0, 0.0, 2.0, 0.0, 0.0, 2.0, 0.0, 0.0, 2.0, 0.0, 0.0, 2.0, 0.0, 0.0, 2.0, 0.0, 0.0, 2.0, 0.0, 0.0, 2.0, 0.0, 0.0, 2.0, 0.0, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../BulletPath:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.075, 0.1, 0.175, 0.2, 0.275, 0.3, 0.375, 0.4, 0.475, 0.5, 0.575, 0.6, 0.675, 0.7, 0.775, 0.8, 0.875, 0.9, 0.975, 1, 1.075, 1.1, 1.175),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.647059), Color(1, 1, 1, 1), Color(1, 1, 1, 0.647059), Color(1, 1, 1, 1), Color(1, 1, 1, 0.647059), Color(1, 1, 1, 1), Color(1, 1, 1, 0.647059), Color(1, 1, 1, 1), Color(1, 1, 1, 0.647059), Color(1, 1, 1, 1), Color(1, 1, 1, 0.647059), Color(1, 1, 1, 1), Color(1, 1, 1, 0.647059), Color(1, 1, 1, 1), Color(1, 1, 1, 0.647059), Color(1, 1, 1, 1), Color(1, 1, 1, 0.647059), Color(1, 1, 1, 1), Color(1, 1, 1, 0.647059), Color(1, 1, 1, 1), Color(1, 1, 1, 0.647059), Color(1, 1, 1, 1), Color(1, 1, 1, 0.647059)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../LineOfSight/LineOfFire:enabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1, 1.15),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false]
}

[sub_resource type="Animation" id="Animation_7e8xh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Muzzle:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Muzzle/Flash:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../BulletPath:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3c7i6"]
_data = {
"Firing": SubResource("Animation_gmvwc"),
"RESET": SubResource("Animation_7e8xh")
}

[sub_resource type="Gradient" id="Gradient_xhxey"]
offsets = PackedFloat32Array(0, 0.103448, 0.318966, 0.474138, 0.836207)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0.728448, 1, 1, 1, 0.517241, 1, 1, 1, 0.402299, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ifctb"]
gradient = SubResource("Gradient_xhxey")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.9, 0.1)
metadata/_snap_enabled = true

[node name="Gun-Rifle" type="Node2D" node_paths=PackedStringArray("fire_function", "line_of_sight", "obstacle_sight", "friendly_sight")]
script = ExtResource("1_njox0")
cooldown_min = 1.9
cooldown_max = 2.6
fire_function = NodePath("FireFunction")
line_of_sight = NodePath("LineOfSight")
obstacle_sight = NodePath("LineOfSight/ObstacleSight")
friendly_sight = NodePath("LineOfSight/FriendySight")

[node name="VisualTestArea" parent="." instance=ExtResource("2_0s0ld")]
offset_right = 600.0

[node name="FireFunction" type="Node" parent="." node_paths=PackedStringArray("animation_player", "line_of_sight", "line_of_fire", "line_of_fire_const", "bullet_path", "bullet_path_default_pos", "bullet_spark", "colliding_point")]
script = ExtResource("2_4luqg")
animation_player = NodePath("Rifle")
line_of_sight = NodePath("../LineOfSight")
line_of_fire = NodePath("../LineOfSight/LineOfFire")
line_of_fire_const = NodePath("../LineOfSight/LineOfFire/Const")
bullet_path = NodePath("../BulletPath")
bullet_path_default_pos = NodePath("../CollidingPointDefault")
bullet_spark = NodePath("../BulletSpark")
colliding_point = NodePath("../CollidingPoint")

[node name="Rifle" type="AnimationPlayer" parent="FireFunction"]
libraries = {
"": SubResource("AnimationLibrary_3c7i6")
}

[node name="Light" type="PointLight2D" parent="."]
position = Vector2(12, 0)
color = Color(1, 0.85651, 0.698241, 1)
energy = 0.8
blend_mode = 2
shadow_enabled = true
shadow_item_cull_mask = 32768
texture = ExtResource("4_jryup")

[node name="Muzzle" type="PointLight2D" parent="."]
position = Vector2(24, 0)
rotation = 1.57079
color = Color(0.956863, 0.619608, 0.113725, 1)
energy = 0.0
shadow_enabled = true
shadow_item_cull_mask = 32801
texture = ExtResource("4_vkikv")
texture_scale = 0.5

[node name="Flash" type="PointLight2D" parent="Muzzle"]
position = Vector2(-2.09808e-05, 10)
color = Color(0.956863, 0.619608, 0.113725, 1)
energy = 0.0
shadow_enabled = true
shadow_item_cull_mask = 32769
texture = SubResource("GradientTexture2D_ifctb")
texture_scale = 3.0

[node name="LineOfSight" type="RayCast2D" parent="."]
target_position = Vector2(280, 0)
collision_mask = 4
collide_with_areas = true

[node name="LineOfFire" type="RayCast2D" parent="LineOfSight"]
target_position = Vector2(280, 0)
collision_mask = 8213
collide_with_areas = true

[node name="Const" type="RayCast2D" parent="LineOfSight/LineOfFire"]
target_position = Vector2(280, 0)
collision_mask = 8213
collide_with_areas = true

[node name="Point" type="Marker2D" parent="LineOfSight"]

[node name="ObstacleSight" type="RayCast2D" parent="LineOfSight"]
target_position = Vector2(280, 0)
collision_mask = 144

[node name="Point" type="Marker2D" parent="LineOfSight/ObstacleSight"]

[node name="FriendySight" type="RayCast2D" parent="LineOfSight"]
target_position = Vector2(280, 0)
collision_mask = 144

[node name="Point" type="Marker2D" parent="LineOfSight/FriendySight"]

[node name="BulletPath" parent="." instance=ExtResource("5_j7t08")]
modulate = Color(1, 1, 1, 0)
points = PackedVector2Array(0, 0, 280, 0)

[node name="BulletSpark" parent="." instance=ExtResource("6_nqlb2")]
position = Vector2(215, 0)

[node name="CollidingPoint" type="Marker2D" parent="."]
visible = false

[node name="CollidingPointDefault" type="Marker2D" parent="."]
visible = false
position = Vector2(215, 0)

[connection signal="tree_entered" from="LineOfSight/LineOfFire" to="." method="_on_line_of_fire_tree_entered"]
